--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "description": "",
   "dependencies": {
     "@types/express": "^4.17.18",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@types/node": "^24.1.0",
     "nodemon": "^3.1.10",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2"
+    "ts-node-dev": "^2.0.0"
   }
 }
