--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "module": "commonjs",
     "target": "esnext",
     "types": ["node"],
+    "typeRoots": ["node_modules/@type"],
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
